--- a/platzi/Juego Kopenom/Juego Kopenom/styles_kopenom.css
+++ b/platzi/Juego Kopenom/Juego Kopenom/styles_kopenom.css
@@ -28,9 +28,7 @@ para entender a profundidad CSS flexbox: css-tricks.com
  
 body {
     font-family: 'Fredoka One', 'cursive';
-    background-color: #041C32;
-    
-    font-family: 'Russo One', sans-serif;
+    background-color: #041C32; 
     background-image: url(./fondo.jpg);
     background-size: cover;
 }
@@ -46,6 +44,7 @@ body {
     font-size: 62px;
     -webkit-text-stroke: 1px black;
     color: #ffaf01;
+    font-family: 'fredoka one';
 }
 
 .subtitulo {
@@ -82,7 +81,7 @@ body {
   
   .tarjeta-de-kopenom img {
       width: 100px;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'fredoka one', sans-serif;
  }
 
   #boton-seleccionar {
@@ -92,7 +91,7 @@ body {
     background-color: transparent;
     color: white;
     border: 2px solid white;
-    font-family: 'poppins';
+    font-family: 'poppins', sans-serif;
     margin-top: 30px;
 }
 
@@ -103,5 +102,16 @@ body {
   #seleccionar-ataque {
     flex-direction: column;
     align-items: center;
-    
+    font-family: 'poppins', sans-serif;
+ }
+
+.boton-de-ataque {
+    width: 180px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: transparent;
+    color: white;
+    border: 2px solid white;
+    font-family: 'poppins', sans-serif;
+    margin-top: 30px;
 }
